Fix T70714: Crash when using OBJECT_OT_material_slot_assign op without UI.

There is no guarantee we can get any valid UI from the context, and that
operator can work without it.